# geochef-skill

./: .gitignore  README.md  SKILL.md  dataset_links.md  pyproject.toml  requirements.txt  rs_vlm_datasets.xlsx
geochef_mcp/: __init__.py  core.py  data.py  favorites.py  nasa.py  server.py
